# mangos-tbc

./: .gitignore  CMakeLists.txt  README.md
contrib/fails/: Settings.cpp  Settings.h
sql/: realmd.sql  wardendata
sql/Custom/: characters_cheaters.sql  characters_item_instance.sql  characters_item_transmog.sql  characters_player_settings.sql  fakeplayerbytes.sql  ip2nation.txt  learnallspells.sql  mangos_config.sql  mangos_playerscript_template.sql  mangos_playertemplate_talents.sql  playertemplate_enchants.sql  questspells.sql  realmd_config.sql  realmd_config_descriptions.sql  realmd_realmlist.sql  realmd_warden.sql  realmd_warden_data_result.sql  rfag_structure.sql  talenttemplates.sql
sql/updates/: update.sh
src/: CMakeLists.txt
src/framework/: CMakeLists.txt
src/framework/Dynamic/: FactoryHolder.h  ObjectRegistry.h
src/framework/Platform/: Define.h
src/framework/Policies/: ObjectLifeTime.h
src/game/: AccountMgr.cpp  AccountMgr.h  AntiCheat.cpp  AntiCheat.h  AntiCheat_fly.cpp  AntiCheat_fly.h  AntiCheat_gravity.cpp  AntiCheat_gravity.h  AntiCheat_jump.cpp  AntiCheat_jump.h  AntiCheat_nofall.cpp  AntiCheat_nofall.h  AntiCheat_speed.cpp  AntiCheat_speed.h  AntiCheat_teleport.cpp  AntiCheat_teleport.h  AntiCheat_test.cpp  AntiCheat_test.h  AntiCheat_tptoplane.cpp  AntiCheat_tptoplane.h  AntiCheat_wallclimb.cpp  AntiCheat_wallclimb.h  AntiCheat_walljump.cpp  AntiCheat_walljump.h  AntiCheat_waterwalking.cpp  AntiCheat_waterwalking.h  AuctionHouseHandler.cpp  AuctionHouseMgr.cpp  CMakeLists.txt  Camera.h  Channel.cpp  CharacterDatabaseCleaner.cpp  CharacterHandler.cpp  Chat.cpp  Chat.h  ChatHandler.cpp  ConfusedMovementGenerator.h  Creature.h  CreatureAI.h  CreatureAISelector.cpp  (+93 more)
src/mangosd/: CMakeLists.txt  CliRunnable.cpp  Main.cpp  Master.cpp  RASocket.cpp  RASocket.h  WorldRunnable.cpp  mangosd.conf.dist.in
src/realmd/: AuthSocket.cpp  AuthSocket.h  Main.cpp  RealmList.cpp  RealmList.h  realmd.conf.dist.in
src/scriptdev2/: CMakeLists.txt  ScriptMgr.cpp  ScriptMgr.h
src/scripts/: Battlegrounds.cpp  CMakeLists.txt  Precompiled.cpp  Precompiled.h  ScriptLoader.cpp  npc_beast_master.cpp  npc_enchant.cpp  npc_spirit_guide.cpp  npc_teleporter.cpp  npc_teleporter_old.cpp  npc_training_dummy.cpp  pgossip_template.cpp  sc_default.cpp
src/shared/: CMakeLists.txt  Common.h  Log.cpp  Log.h  SystemConfig.h.in  Timer.h  Util.cpp  Util.h  WheatyExceptionReport.cpp
win/: mangosdVC110.sln  mangosdVC120.sln
win/VC110/: 110ScriptDev2.vcxproj  game.vcxproj  game.vcxproj.filters  mangosd.vcxproj  scripts.vcxproj  scripts.vcxproj.filters
win/VC120/: framework.vcxproj  game.vcxproj  game.vcxproj.filters  mangosd.vcxproj  realmd.vcxproj  scripts.vcxproj  scripts.vcxproj.filters  shared.vcxproj  shared.vcxproj.filters
win/VC140/: ScriptDev2.vcxproj  game.vcxproj  game.vcxproj.filters
(+72 files in other folders)
